<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/goldLight">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button android:id="@+id/seeBudgetsButton"
            style="@style/OptionButton"
            android:background="@color/green"
            android:text="@string/see_budgets"/>

        <Button android:id="@+id/logTransactionButton"
            style="@style/OptionButton"
            android:background="@color/teal"
            android:text="@string/log_transaction"
            android:layout_below="@+id/seeBudgetsButton"/>

        <Button android:id="@+id/seeTransactionsButton"
            style="@style/OptionButton"
            android:background="@color/blue"
            android:text="@string/see_transactions"
            android:layout_below="@+id/logTransactionButton"/>

        <Button android:id="@+id/createCategoryButton"
            style="@style/OptionButton"
            android:background="@color/purple"
            android:text="@string/create_category"
            android:layout_below="@+id/seeTransactionsButton"/>

        <Button android:id="@+id/editCategoriesButton"
            style="@style/OptionButton"
            android:background="@color/pink"
            android:text="@string/edit_categories"
            android:layout_below="@+id/createCategoryButton"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>